update design and style sheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoviGo — “Move. Eat. Deliver.”</title>
+    <!-- Meta Information -->
+    <meta name="description"
+        content="MoviGo is a food delivery app prototype that allows users to order food from their favorite restaurants and have it delivered to their doorstep.">
+    <meta name="keywords"
+        content="food delivery app, food ordering app, restaurant app, delivery app prototype, food delivery prototype">
+    <meta name="author" content="CodeCayon">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <!-- Google Fonts Roboto Regular -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,9 +36,20 @@
         <div class="splash-main-image">
             <img src="assets/images/splash/splash-image.png" alt="splash image" class="w-100">
         </div>
+        <div class="splash-main-content p-3">
+            <h2 class="display-6 fw-bold text-dark lh-sm">
+                Create a prototype in just a few minutes
+            </h2>
+            <p class="mt-3 text-secondary mb-5">
+                Enjoy these pre-made components and worry only about creating the best product ever.
+            </p>
+            <!-- Action Button -->
+            <button id="next-button" class="btn btn-primary btn-lg w-100 rounded-4 shadow" onclick="handleNextClick()">
+                Next
+            </button>
+        </div>
+
     </div>
-
-
 
     <!-- Bootstrap Js file -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
