--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Enjoy these pre-made components and worry only about creating the best product ever.
             </p>
             <!-- Action Button -->
-            <button id="next-button" class="btn btn-primary btn-lg w-100 rounded-4 shadow" onclick="handleNextClick()">
+            <button id="next-button" class="btn btn-primary btn-lg w-100 rounded-4 shadow mt-3 mb-3" onclick="handleNextClick()">
                 Next
             </button>
         </div>
