--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="splash-main-image">
             <img src="assets/images/splash/splash-image.png" alt="splash image" class="w-100">
         </div>
-        <div class="splash-main-content p-3">
+        <div class="splash-main-content p-3 mt-3">
             <h2 class="display-6 fw-bold text-dark lh-sm">
                 Create a prototype in just a few minutes
             </h2>
@@ -44,7 +44,7 @@
                 Enjoy these pre-made components and worry only about creating the best product ever.
             </p>
             <!-- Action Button -->
-            <button id="next-button" class="btn btn-primary btn-lg w-100 rounded-4 shadow mt-3 mb-3" onclick="handleNextClick()">
+            <button class="btn btn-primary btn-lg w-100 rounded-4 shadow mt-3 mb-3">
                 Next
             </button>
         </div>
