--- a/login.html
+++ b/login.html
@@ -34,21 +34,42 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="splash-main-image">
-            <img src="assets/images/splash/splash-image.png" alt="splash image" class="w-100 long-height">
+            <img src="assets/images/splash/splash-image.png" alt="splash image" class="w-100 login-image">
         </div>
         <div class="splash-main-content p-3 mt-3">
-            <h2 class="display-6 fw-bold text-dark lh-sm">
-                Create a prototype in just a few minutes
+            <h2 class="fw-bolder display-6 mb-3">
+                Welcome to MoviGo
             </h2>
-            <p class="mt-3 text-secondary mb-5">
-                Enjoy these pre-made components and worry only about creating the best product ever.
-            </p>
+            <form action="">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+            </form>
+            <a href="" class="text-main">Forgot password?</a>
             <!-- Action Button -->
             <a href="login.html" class="btn btn-primary btn-lg w-100 rounded-4 shadow mt-3 mb-3">
-                Next
+                Login
             </a>
         </div>
-
+        <div class="social-login mt-2 mb-3">
+            <p class="text-center text-secondary mb-2">Or login with</p>
+            <div class="d-flex justify-content-center gap-3">
+                <a href="#" class="social-login-link">
+                    <img src="assets/images/login/apple.svg" alt="apple icon">
+                </a>
+                <a href="#" class="social-login-link">
+                    <img src="assets/images/login/facebook.svg" alt="facebook icon">
+                </a>
+                <a href="#" class="social-login-link">
+                    <img src="assets/images/login/google.svg" alt="google icon">
+                </a>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap Js file -->
